BTRoblox #69 : Shift input-dropdown-btn down, avoid overlap

--- a/stylustheme.css
+++ b/stylustheme.css
@@ -4192,4 +4192,7 @@
     .btr-profile-favorites {
         padding-top: 30px;
     }
+    div.btr-profile-favorites > div > div > button.input-dropdown-btn {
+        margin-top: 13px;
+    }
 }
